# ccv

./: .doxygen.conf  .gitignore  .travis.yml  CMakeLists.txt  COPYING  README.md  THANKS  config.hpp.in
app/: CMakeLists.txt  face_detection.cpp  started.cpp
cmake/: CreateLaunchers.cmake  EnableExtraCompilerWarnings.cmake  ListSubDirs.cmake  README.markdown  export-to-directory.sh  findOpenMesh.cmake  findarmadillo.cmake  findlibicp.cmake  findnlopt.cmake  findopencl.cmake  module-help.html  qt_support.cmake
cmake/launcher-templates/: genericlauncher.sh.in  launcher.env.sh.in  targetlauncher.sh.in
doc/: bbf.md  cache.md  convnet.md  dpm.md  http.md  icf.md  scd.md  sift.md  swt.md  tld.md
js/: a.css  index.html  loader.php
lib/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  ccv.h  ccv.hpp  ccv_algebra.c  ccv_basic.c  ccv_bbf.c  ccv_cache.c  ccv_classic.c  ccv_convnet.c  ccv_daisy.c  ccv_doxygen.h  ccv_dpm.c  ccv_ferns.c  ccv_icf.c  ccv_image_processing.c  ccv_internal.h  ccv_io.c  ccv_memory.c  ccv_mser.c  ccv_numeric.c  ccv_output.c  ccv_resample.c  ccv_scd.c  ccv_sift.c  ccv_sparse_coding.c  ccv_swt.c  ccv_tld.c  ccv_transform.c  ccv_util.c  config.mk.in  configure  configure.ac  makefile
lib/cuda/: .ycm_extra_conf.py  cwc.h  cwc_convnet.cu  cwc_convnet_helper.c  cwc_helper.h  cwc_internal.h
lib/inl/: ccv_convnet_inl.h
lib/io/: _ccv_io_binary.c  _ccv_io_bmp.c  _ccv_io_libjpeg.c  _ccv_io_libpng.c  _ccv_io_raw.c
samples/: .gitignore  car.m  download-vgg-d-32bit.sh  download-vgg-d-model.sh  image-net-2012.wnid  image-net-2012.words  pedestrian.icf  pedestrian.m
samples/face/: cascade.txt  stage-0.txt  stage-1.txt  stage-10.txt  stage-11.txt  stage-12.txt  stage-13.txt  stage-14.txt  stage-15.txt  stage-2.txt  stage-3.txt  stage-4.txt  stage-5.txt  (+4 more)
serve/: async.c  async.h  bbf.c  convnet.c  dpm.c  ebb.c  ebb.h  ebb_request_parser.c  ebb_request_parser.h  ebb_request_parser.rl  icf.c  makefile  parsers.c  scd.c  serve.c  sift.c  swt.c  tld.c  uri.c  uri.h
site/: CNAME  _config.yml  _doxygen.rb  _doxygen.sh  index.html  makefile
test/: case.h  case_main.h  ccv_case.h  makefile
(+112 files in other folders)
